objects/SBQQ__InstallProcessorLog__c.object
<CustomObject>
    <customHelpPage>SBQQ__ImportFormatHelp</customHelpPage>
    <description>Logs timestamps for methods within the Install Script</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__MethodName__c</fullName>
        <description>Name of the method run within the Install Script</description>
        <inlineHelpText>Name of the method run within the Install Script</inlineHelpText>
        <label>Method Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Time__c</fullName>
        <description>Timestamp for running the method</description>
        <inlineHelpText>Timestamp for running the method</inlineHelpText>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBQQ__Version__c</fullName>
        <description>Package version at the time of running the method</description>
        <inlineHelpText>Package version at the time of running the method</inlineHelpText>
        <label>Version</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Install Processor Log</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__MethodName__c</columns>
        <columns>SBQQ__Time__c</columns>
        <columns>SBQQ__Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Install Processor Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Processor Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>